W-17774312: Move ArtifactDeclaration uses from spring-config to tooling-support